# MarsEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/basic_shapes/: colored_cube.mtl
assets/models/container/: container.mtl
assets/models/floor/: floor.mtl
assets/models/rock/: rock.mtl
assets/models/shanalotte/: Shanalotte.mtl
assets/models/textured_cube/: textured_cube.mtl
assets/models/thingy/: thingy.mtl
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/general/: basic.frag  basic2D.vert  basic_geometry_model.vert  basic_geometry_unlit_diffuse.frag  basic_temp.frag  basic_temp.vert  default.vert  default_instanced.vert  depth_buffer.frag  double_texture.frag  doubletexture.vert  explode_object.geom  point_houses.frag  point_houses.geom  point_houses.vert  skybox.frag  skybox.vert  skyboxRefraction.frag  skybox_reflection.frag  solidColor.frag  tex_coords.vert  texcoords.frag  transparent_texture.frag  uniform_colors.frag  vertexColors.vert  vertex_colors.frag
shaders/lighting/: directional_light.frag  simple_diffuse_unlit.frag
shaders/lighting/blinn-phong/: point_lights.frag
shaders/lighting/phong/: fullLightScene.frag  pointLight.frag  point_lights.frag  simpleDiffuseUnlit.frag  spot_light.frag
shaders/post_processing/: blur.frag  default_screen_space.frag  default_screen_space.vert  edge_detection.frag  grayscale.frag  inversion.frag  postProcess.frag  sharpen.frag
shaders/shaderdev/: cloudy_day.frag  funky_sdf.frag  grass.frag  grass.vert  grid_functions.frag  ground.frag  ground.vert  image_manipulation.frag  lighting.frag  model.vert  planet.frag  raymarch_cubescene.frag  raymarch_terrain.frag  scrolling_mountains.frag  skysphere.frag  skysphere.vert  step_smoothstep_mix.frag  vertex_colors.frag  wip.frag  wip.vert
shaders/shadertutorial/: cel_shading.frag  wip.frag  wip.vert
source/: camera.h  constants.h  functions.cpp  functions.h  main.cpp  resource_manager.cpp  resource_manager.h  utility.cpp  utility.h
source/assets/: import_functions.cpp  import_functions.h  model_loader.cpp  model_loader.h
source/classes/: camera.cpp  camera.h  light_manager.cpp  light_manager.h  mesh.cpp  mesh.h  model.cpp  model.h  point_light.cpp  point_light.h  point_light_collection.cpp  point_light_collection.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  shader_program.cpp  shader_program.h
source/geometry/: geometry_functions.cpp  geometry_functions.h  geometry_structs.h  mesh.cpp  mesh.h  model.cpp  model.h
source/rendering/: mesh.cpp  mesh.h  model.cpp  model.h  rendering_functions.cpp  rendering_functions.h
source/scenes/: scene.cpp  scene.h
source/shading/: light_manager.cpp  light_manager.h  shader_manager.cpp  shader_manager.h  shader_program.cpp  shader_program.h
source/shading/lighting/: light_manager.cpp  light_manager.h  light_structs.h
source/utility/: mesh.cpp  mesh.h  model_loader.cpp  model_loader.h  utility_functions.cpp  utility_functions.h
